[package]
name = "blog"
version = "0.1.0"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
serde_json = "1"

uuid = { version = "0", features = ["v4"] }
sha2 = "0"

sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "sqlite" ] }